--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,18 @@ body {
 	cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover,
+.upload-btn:hover {
 	background-color: #945c5c;
+}
+
+.upload-btn {
+	margin-top: 20px;
+	padding: 15px;
+	background-color: gray;
+	color: white;
+	cursor: pointer;
+	border: none;
+	font-weight: bold;
+	border-radius: 10px;
 }
